<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="blockedContactsViewModel"
            type="com.beetlestance.smartcaller.ui.blocked.BlockedViewModel" />

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/root_fragment_blocked_contacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/search_blocked_contacts_motion_scene">

        <View
            android:id="@+id/fragment_blocked_contacts_toolbar_background"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorSurface"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_blocked_contacts_title"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/blocked_contacts_title"
            android:textAppearance="?textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="@id/fragment_blocked_contacts_toolbar_background"
            app:layout_constraintEnd_toStartOf="@id/fragment_blocked_contacts_open_search_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fragment_blocked_contacts_toolbar_background" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_blocked_contacts_open_search_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@id/fragment_blocked_contacts_toolbar_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_search_24"
            app:tint="?colorOnSurface" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_blocked_contacts_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="?colorSurface"
            app:boxStrokeColor="?colorControlHighlight"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_blocked_contacts_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contacts_search_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:longClickable="false"
                android:text=""
                android:textColor="?colorOnSurface"
                android:textColorHint="?colorControlHighlight" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/fragment_blocked_contacts_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:constraint_referenced_ids="fragment_blocked_contacts_toolbar_background,
            fragment_blocked_contacts_title,
            fragment_blocked_contacts_open_search_view,
            fragment_blocked_contacts_edit_layout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_blocked_contacts_add_new_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/blocked_contacts_add_number"
            android:src="@drawable/ic_baseline_dialpad_24"
            android:tint="?colorOnPrimary"
            app:backgroundTint="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_blocked_contacts_empty_placeholder"
            animateVisibility="@{blockedContactsViewModel.isDataEmpty}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:srcCompat="@drawable/ic_no_blocked_contacts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_blocked_contacts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_blocked_contacts_toolbar_background"
            tools:itemCount="8"
            tools:listitem="@layout/item_view_contact" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>